--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 class="flex justify-center items-center [&>*]:flex [&>*]:flex-col [&>*]:items-center gap-2"
               >
                 <div>
-                  <b>60</b>
+                  <b>4</b>
                   <p>posts</p>
                 </div>
                 <div>
@@ -108,13 +108,9 @@
 
       <div class="px-2 py-4 pb-2 leading-5">
         <b class="text-[1.1rem]">Breno Romeiro</b>
+        <p>Frontend Developer</p>
         <p>
           <a href="mailto:bsromeiro@gmail.com">bsromeiro@gmail.com</a>
-        </p>
-        <p>
-          <a target="_blank" href="https://breno-95.netlify.app/"
-            >brenoromeiro.com</a
-          >
         </p>
       </div>
 
@@ -154,7 +150,7 @@
       </div>
 
       <section
-        class="grid grid-cols-3 gap-[1px] bg-gray-light overflow-auto overflow-x-hidden h-full border-l-black border-t-black border-2 mx-1 grid-rows-[min-content] [&>*>img]:h-full [&>*>img]:w-full"
+        class="grid grid-cols-3 gap-[1px] bg-gray-light overflow-auto overflow-x-hidden h-full border-l-black border-t-black border-2 mx-1 grid-rows-[min-content] [&>*>a>img]:h-full [&>*>a>img]:w-full"
       >
         <div class="bg-black h-fit aspect-square w-full">
           <a href="https://karolinvanloon.com/" target="_blank">
