--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 class="flex justify-center items-center [&>*]:flex [&>*]:flex-col [&>*]:items-center gap-2"
               >
                 <div>
-                  <b>4</b>
+                  <b>5</b>
                   <p>posts</p>
                 </div>
                 <div>
@@ -152,6 +152,11 @@
       <section
         class="grid grid-cols-3 gap-[1px] bg-gray-light overflow-auto overflow-x-hidden h-full border-l-black border-t-black border-2 mx-1 grid-rows-[min-content] [&>*>a>img]:h-full [&>*>a>img]:w-full"
       >
+        <div class="bg-black h-fit aspect-square w-full">
+          <a href="https://web3-portfolio-ruddy.vercel.app/" target="_blank">
+            <img src="./assets/images/portfolio-web3.png" alt="" />
+          </a>
+        </div>
         <div class="bg-black h-fit aspect-square w-full">
           <a href="https://karolinvanloon.com/" target="_blank">
             <img src="./assets/images/portfolio-kvl.png" alt="" />
