add: tabula rasa and pablos projects

--- a/index.html
+++ b/index.html
@@ -153,6 +153,16 @@
         class="grid grid-cols-3 gap-[1px] bg-gray-light overflow-auto overflow-x-hidden h-full border-l-black border-t-black border-2 mx-1 grid-rows-[min-content] [&>*>a>img]:h-full [&>*>a>img]:w-full"
       >
         <div class="bg-black h-fit aspect-square w-full">
+          <a href="https://paaablo.com/" target="_blank">
+            <img src="./assets/images/portfolio-pablo.png" alt="" />
+          </a>
+        </div>
+        <div class="bg-black h-fit aspect-square w-full">
+          <a href="https://santuariotabularasa.com/" target="_blank">
+            <img src="./assets/images/portfolio-tabula-rasa.png" alt="" />
+          </a>
+        </div>
+        <div class="bg-black h-fit aspect-square w-full">
           <a href="https://web3-portfolio-ruddy.vercel.app/" target="_blank">
             <img src="./assets/images/portfolio-web3.png" alt="" />
           </a>
