add: brenogram instead of instagram

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/dist/output.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
-    <title>Instagram</title>
+    <title>Brenogram</title>
   </head>
   <body class="bg-[#5d5d5d] flex flex-col items-center">
     <main
@@ -16,7 +16,7 @@
       <header class="flex justify-between px-2 py-1">
         <div class="flex items-center gap-1">
           <img src="./assets/icons/instagram.png" class="w-4 h-4" alt="" />
-          <h2 class="text-gray-300 font-bold">Instagram.exe</h2>
+          <h2 class="text-gray-300 font-bold">Brenogram.exe</h2>
         </div>
         <ul class="list-none flex items-center gap-1">
           <li class="flex">
